--- a/OneDriveUploadTool/OneDriveUploadTool.csproj
+++ b/OneDriveUploadTool/OneDriveUploadTool.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="TaskTupleAwaiter" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Techsola.StructuredProgress\src\Techsola.StructuredProgress\Techsola.StructuredProgress.csproj" />
+  </ItemGroup>
+
 </Project>
